@@ -68,7 +68,8 @@ enum
 	XP_TE_WHOIS_REALHOST,		XP_TE_WHOIS3,
 	XP_TE_WHOIS_SPECIAL,		XP_TE_UJOIN,
 	XP_TE_UKICK,		XP_TE_UPART,
-	XP_TE_UPARTREASON,		XP_TE_UINVITE,
-	XP_TE_UCHANMSG,		XP_TE_UCHANGENICK,
+	XP_TE_UPARTREASON,		XP_TE_UACTION,
+	XP_TE_UINVITE,		XP_TE_UCHANMSG,
+	XP_TE_UCHANGENICK,
 	NUM_XP
 };
