@@ -796,6 +796,12 @@ pevt_partreason_help
 %C23*$tYou have left channel $3 (%O%C23%B%B$4%O%C23)
 4
 
+Your Action
+XP_TE_UACTION
+pevt_chanaction_help
+%C18*$t$1%O $2
+n3
+
 Your Invitation
 XP_TE_UINVITE
 pevt_uinvite_help
